[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dropbox-mcp-server"
version = "1.0.0"
description = "MCP server for reading and querying files from Dropbox"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Cindy et Claude", email = "cindyb@mit.edu" }
]
keywords = ["mcp", "dropbox", "file-reader", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.1.0",
    "dropbox>=12.0.0",
    "pydantic>=2.0.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "uvicorn>=0.27.0",
    "starlette>=0.35.0",
]

[project.urls]
Homepage = "https://github.com/cindyloo/dropbox-mcp-server"
Repository = "https://github.com/cindyloo/dropbox-mcp-server"
Issues = "https://github.com/cindyloo/dropbox-mcp-server/issues"

[project.scripts]
dropbox-mcp-server = "dropbox_server:main"
